--- a/tweet/index.html
+++ b/tweet/index.html
@@ -8,8 +8,8 @@
     <meta charset="utf-8" />
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
     <meta content="width=device-width, initial-scale=1, maximum-scale=2, user-scalable=no" name="viewport" />
-    <meta content="Bingo Du, tarvos21, Du Bing, 杜兵" name="description" />
-    <meta content="Bingo Du, tarvos21, Du Bing, 杜兵" name="keywords" />
+    <meta content="杜小清，1962年出生，是杜兵的爸爸，平时会写作一些诗和文章，杜兵将它们录入到电脑，并拍照，之后做成网页，放到网上，留作纪念，也可让其他人欣赏。始于2017年12月22日。" name="description" />
+    <meta content="杜小清, 杜兵的爸爸" name="keywords" />
     <meta content="Bingo Du" name="author" />
     <link href="/apple-icon-57x57.png" rel="apple-touch-icon" sizes="57x57" />
     <link href="/apple-icon-60x60.png" rel="apple-touch-icon" sizes="60x60" />
@@ -29,7 +29,7 @@
     <meta content="/ms-icon-144x144.png" name="msapplication-TileImage" />
     <meta content="#ffffff" name="theme-color" />
     <link color="#5bbad5" href="/safari-pinned-tab.svg" rel="mask-icon" />
-    <title>Develop to Know and Love</title>
+    <title>杜小清的主页</title>
     <link href="/static/dist/semantic-ui/semantic.min.css" rel="stylesheet" type="text/css" />
     <link href="/static/dist/fonts.css/fonts.css" rel="stylesheet" type="text/css" />
     <link href="/static/stylesheets/default.css" rel="stylesheet" type="text/css" />
@@ -39,29 +39,18 @@
   <body lang="en">
     <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T3BCLF2" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <div id="content">
-      <nav class="ui borderless red inverted menu" lang="en">
-        <div class="ui container">
-          <a class="ui header item" href="/"><img class="ui mini image" src="/static/logo/gravatar/gravatar.png" />
-            <div class="header item">
-              Bingo Du
-            </div>
-          </a><a class="item" href="/blog">Blog</a><a class="item" href="/tweet">Tweet</a><a class="item" href="/relax">Relax</a><a class="item" href="/type">Type</a><a class="item" href="/random">Random</a><a class="item" href="/about">About</a>
-          <div class="right menu">
-            <a class="item" href="https://github.com/tarvos21" target="_blank"><i class="github icon"></i></a><a class="item" id="contact"> Contact Me</a>
-          </div>
-        </div>
-      </nav><div class="ui stackable container">
+      <div class="ui stackable container">
         <div class="ui very padded black inverted segment article">
           <div class="ui stackable grid">
             <div class="row">
               <div class="ui three stackable doubling link cards">
-                <div class="ui red card">
+                <div class="ui green card">
                 <div class="content">
                   <h1 class="header">
                     Capacity for effort
                   </h1>
                   <div class="meta">
-                    <date>Mar 14, 2017</date><div class="ui violet inverted label">Life</div><div class="ui pink inverted label">Action</div>
+                    <date>Mar 14, 2017</date><div class="ui pink inverted label">Life</div><div class="ui blue inverted label">Action</div>
                   </div>
                   <div class="description">
                     <h5 class="header">
@@ -71,13 +60,13 @@
                   </div>
                 </div>
                 </div>
-                <div class="ui purple card">
+                <div class="ui red card">
                 <div class="content">
                   <h1 class="header">
                     Time Machine on macOS Sierra
                   </h1>
                   <div class="meta">
-                    <date>Mar 01, 2017</date><div class="ui orange inverted label">Time Machine</div><div class="ui olive inverted label">macOS Sierra</div>
+                    <date>Mar 01, 2017</date><div class="ui blue inverted label">Time Machine</div><div class="ui purple inverted label">macOS Sierra</div>
                   </div>
                   <div class="description">
                     <h5 class="header">
@@ -87,13 +76,13 @@
                   </div>
                 </div>
                 </div>
-                <div class="ui brown card">
+                <div class="ui blue card">
                 <div class="content">
                   <h1 class="header">
                     Ruby on macOS Sierra  
                   </h1>
                   <div class="meta">
-                    <date>Feb 28, 2017</date><div class="ui red inverted label">Ruby</div><div class="ui violet inverted label">RVM</div><div class="ui blue inverted label">macOS Sierra</div>
+                    <date>Feb 28, 2017</date><div class="ui purple inverted label">Ruby</div><div class="ui blue inverted label">RVM</div><div class="ui violet inverted label">macOS Sierra</div>
                   </div>
                   <div class="description">
                     <h5 class="header">
@@ -103,13 +92,13 @@
                   </div>
                 </div>
                 </div>
-                <div class="ui pink card">
+                <div class="ui brown card">
                 <div class="content">
                   <h1 class="header">
                     Quote: Be Uncomfortable
                   </h1>
                   <div class="meta">
-                    <date>Feb 17, 2017</date><div class="ui violet inverted label">Larry Page</div>
+                    <date>Feb 17, 2017</date><div class="ui olive inverted label">Larry Page</div>
                   </div>
                   <div class="description">
                     <h5 class="header">
@@ -119,13 +108,13 @@
                   </div>
                 </div>
                 </div>
-                <div class="ui yellow card">
+                <div class="ui grey card">
                 <div class="content">
                   <h1 class="header">
                     Quote: Innovation Is Bullshit
                   </h1>
                   <div class="meta">
-                    <date>Feb 17, 2017</date><div class="ui violet inverted label">Linus Torvalds</div>
+                    <date>Feb 17, 2017</date><div class="ui olive inverted label">Linus Torvalds</div>
                   </div>
                   <div class="description">
                     <h5 class="header">
@@ -136,13 +125,13 @@
                   </div>
                 </div>
                 </div>
-                <div class="ui purple card">
+                <div class="ui green card">
                 <div class="content">
                   <h1 class="header">
                     Google Codelabs
                   </h1>
                   <div class="meta">
-                    <date>Feb 11, 2017</date><div class="ui yellow inverted label">Google Codelabs</div><div class="ui violet inverted label">Code Practice</div>
+                    <date>Feb 11, 2017</date><div class="ui blue inverted label">Google Codelabs</div><div class="ui red inverted label">Code Practice</div>
                   </div>
                   <div class="description">
                     <h5 class="header">
@@ -152,7 +141,7 @@
                   </div>
                 </div>
                 </div>
-                <div class="ui blue card">
+                <div class="ui green card">
                 <div class="content">
                   <h1 class="header">
                     Github Cards
@@ -168,13 +157,13 @@
                   </div>
                 </div>
                 </div>
-                <div class="ui black card">
+                <div class="ui brown card">
                 <div class="content">
                   <h1 class="header">
                     Computer science courses
                   </h1>
                   <div class="meta">
-                    <date>Jan 31, 2017</date><div class="ui brown inverted label">Computer Science</div>
+                    <date>Jan 31, 2017</date><div class="ui teal inverted label">Computer Science</div>
                   </div>
                   <div class="description">
                     <h5 class="header">
@@ -190,13 +179,13 @@
                   </div>
                 </div>
                 </div>
-                <div class="ui grey card">
+                <div class="ui violet card">
                 <div class="content">
                   <h1 class="header">
                     First Tweet
                   </h1>
                   <div class="meta">
-                    <date>Jan 30, 2017</date><div class="ui yellow inverted label">Nanoc-Plate</div><div class="ui grey inverted label">Semantic-UI</div>
+                    <date>Jan 30, 2017</date><div class="ui blue inverted label">Nanoc-Plate</div><div class="ui grey inverted label">Semantic-UI</div>
                   </div>
                   <div class="description">
                     <h5 class="header">
@@ -220,84 +209,6 @@
         </div>
       </div>
     </div>
-    <div id="footer"><footer lang="en">
-  <div class="ui inverted vertical segment">
-    <div class="ui center aligned container grid">
-      <div class="item">
-        <div class="ui horizontal divided list">
-          <div class="item">
-            <a href="/archive">Archive</a>
-          </div>
-          <div class="item">
-            <a href="/categories">Categories</a>
-          </div>
-          <div class="item">
-            <a href="/tags">Tags</a>
-          </div>
-        </div>
-      </div>
-      <div class="item">
-        <form action="https://www.google.com/search" class="ui mini form" method="get" target="_blank">
-          <input name="q" type="hidden" value="site:tarvos21.github.io" />
-          <div class="ui mini left icon input focus">
-            <input name="q" placeholder="Search..." type="text" /><i class="search icon"></i>
-          </div>
-        </form>
-      </div>
-      <div class="item">
-        <p>
-          © 2017 by Bingo Du. No Rights Reserved.
-        </p>
-      </div>
-    </div>
-  </div>
-</footer>
-<script src="/static/dist/semantic-ui/semantic.min.js"></script>
-<script src="/static/javascripts/default.js"></script>
-<div class="ui modal">
-  <i class="close icon"></i>
-  <div class="header" id="form-header">
-    Hi, I am Bingo <i class="smile icon"></i>, feel free to say anything.
-  </div>
-  <div class="content" id="form-container">
-    <form action="https://script.google.com/macros/s/AKfycbxEMaejmETCbkKci5wWUmfW532vaBXFRAbisS5KpNrRqROahug9/exec" class="ui form" id="gform" method="POST">
-      <div class="field">
-        <label for="name">Name:</label><input id="name" name="name" placeholder="What you want me to call you" />
-      </div>
-      <div class="field">
-        <label for="message">Message:</label><textarea id="message" name="message" placeholder="Tell me what&#39;s on your mind" rows="7"></textarea>
-      </div>
-      <div class="field">
-        <label for="email">Your Email Address:</label><input id="email" name="email" placeholder="your.name@email.com" type="email" value="" />
-      </div>
-      <div class="grouped fields">
-        <label>Do you want a response in 3 days? </label>
-        <div class="field">
-          <div class="ui radio checkbox">
-            <input checked="checked" id="one" name="response" type="radio" value="ASAP" /><label>Yes, the sooner the better</label>
-          </div>
-        </div>
-        <div class="field">
-          <div class="ui radio checkbox">
-            <input id="two" name="response" type="radio" value="Anytime" /><label>Not really, any time will be OK</label>
-          </div>
-        </div>
-        <div class="field">
-          <div class="ui radio checkbox">
-            <input id="three" name="response" type="radio" value="NoResponse" /><label>No, please don't bother</label>
-          </div>
-        </div>
-      </div>
-      <button class="ui primary button" type="submit">Send</button>
-    </form>
-  </div>
-  <div class="ui floating massive black message" id="thankyou_message" style="display:none;">
-    <div class="header">
-      Message sent successfully. Thanks a lot for contacting me.
-    </div>
-  </div>
-</div>
-<script data-cfasync="false" src="/static/javascripts/form-submission-handler.js" type="text/javascript"></script>
-    </div>
+    <div id="footer"></div>
   </body>
 </html>
