--- a/index.html
+++ b/index.html
@@ -42,28 +42,28 @@
       <div class="ui stackable container grid">
         <div class="nine wide centered column">
           <div class="ui raised segment">
-            <h2 class="ui header">
+            <h1 class="ui header">
               <a href="/blog/2017-06-05-Start/">诗一首</a>
               <div class="sub header">
                 2017年12月22日
               </div>
-            </h2>
+            </h1>
           </div>
           <div class="ui raised segment">
-            <h2 class="ui header">
-              <a href="/blog/2017-06-05-Start/">诗一首</a>
+            <h1 class="ui header">
+              <a href="./blog/2017-06-05-Start/">诗一首</a>
               <div class="sub header">
                 2017年12月21日
               </div>
-            </h2>
+            </h1>
           </div>
           <div class="ui raised segment">
-            <h2 class="ui header">
-              <a href="/blog/2017-06-05-Start/">进货记录</a>
+            <h1 class="ui header">
+              <a href="./blog/2017-06-05-Start/">进货记录</a>
               <div class="sub header">
                 2017年12月20日
               </div>
-            </h2>
+            </h1>
           </div>
         </div>
       </div>
