--- a/index.html
+++ b/index.html
@@ -43,25 +43,17 @@
         <div class="nine wide centered column">
           <div class="ui raised segment">
             <h1 class="ui header">
-              <a href="/blog/2017-06-05-Start/">诗一首</a>
+              <a href="./blog/20171223/">诗一首</a>
+              <div class="sub header">
+                2017年12月23日
+              </div>
+            </h1>
+          </div>
+          <div class="ui raised segment">
+            <h1 class="ui header">
+              <a href="/blog/2017-06-05-Start/">测试文章</a>
               <div class="sub header">
                 2017年12月22日
-              </div>
-            </h1>
-          </div>
-          <div class="ui raised segment">
-            <h1 class="ui header">
-              <a href="./blog/2017-06-05-Start/">诗一首</a>
-              <div class="sub header">
-                2017年12月21日
-              </div>
-            </h1>
-          </div>
-          <div class="ui raised segment">
-            <h1 class="ui header">
-              <a href="./blog/2017-06-05-Start/">进货记录</a>
-              <div class="sub header">
-                2017年12月20日
               </div>
             </h1>
           </div>
