--- a/tweet/index.html
+++ b/tweet/index.html
@@ -44,13 +44,13 @@
           <div class="ui stackable grid">
             <div class="row">
               <div class="ui three stackable doubling link cards">
-                <div class="ui orange card">
+                <div class="ui black card">
                 <div class="content">
                   <h1 class="header">
                     Capacity for effort
                   </h1>
                   <div class="meta">
-                    <date>Mar 14, 2017</date><div class="ui grey inverted label">Life</div><div class="ui brown inverted label">Action</div>
+                    <date>Mar 14, 2017</date><div class="ui black inverted label">Life</div><div class="ui green inverted label">Action</div>
                   </div>
                   <div class="description">
                     <h5 class="header">
@@ -60,13 +60,13 @@
                   </div>
                 </div>
                 </div>
-                <div class="ui teal card">
+                <div class="ui yellow card">
                 <div class="content">
                   <h1 class="header">
                     Time Machine on macOS Sierra
                   </h1>
                   <div class="meta">
-                    <date>Mar 01, 2017</date><div class="ui purple inverted label">Time Machine</div><div class="ui blue inverted label">macOS Sierra</div>
+                    <date>Mar 01, 2017</date><div class="ui pink inverted label">Time Machine</div><div class="ui black inverted label">macOS Sierra</div>
                   </div>
                   <div class="description">
                     <h5 class="header">
@@ -82,7 +82,7 @@
                     Ruby on macOS Sierra  
                   </h1>
                   <div class="meta">
-                    <date>Feb 28, 2017</date><div class="ui violet inverted label">Ruby</div><div class="ui grey inverted label">RVM</div><div class="ui pink inverted label">macOS Sierra</div>
+                    <date>Feb 28, 2017</date><div class="ui olive inverted label">Ruby</div><div class="ui yellow inverted label">RVM</div><div class="ui olive inverted label">macOS Sierra</div>
                   </div>
                   <div class="description">
                     <h5 class="header">
@@ -92,7 +92,7 @@
                   </div>
                 </div>
                 </div>
-                <div class="ui green card">
+                <div class="ui olive card">
                 <div class="content">
                   <h1 class="header">
                     Quote: Be Uncomfortable
@@ -108,13 +108,13 @@
                   </div>
                 </div>
                 </div>
-                <div class="ui red card">
+                <div class="ui violet card">
                 <div class="content">
                   <h1 class="header">
                     Quote: Innovation Is Bullshit
                   </h1>
                   <div class="meta">
-                    <date>Feb 17, 2017</date><div class="ui red inverted label">Linus Torvalds</div>
+                    <date>Feb 17, 2017</date><div class="ui purple inverted label">Linus Torvalds</div>
                   </div>
                   <div class="description">
                     <h5 class="header">
@@ -125,13 +125,13 @@
                   </div>
                 </div>
                 </div>
-                <div class="ui orange card">
+                <div class="ui blue card">
                 <div class="content">
                   <h1 class="header">
                     Google Codelabs
                   </h1>
                   <div class="meta">
-                    <date>Feb 11, 2017</date><div class="ui teal inverted label">Google Codelabs</div><div class="ui grey inverted label">Code Practice</div>
+                    <date>Feb 11, 2017</date><div class="ui red inverted label">Google Codelabs</div><div class="ui teal inverted label">Code Practice</div>
                   </div>
                   <div class="description">
                     <h5 class="header">
@@ -141,13 +141,13 @@
                   </div>
                 </div>
                 </div>
-                <div class="ui olive card">
+                <div class="ui brown card">
                 <div class="content">
                   <h1 class="header">
                     Github Cards
                   </h1>
                   <div class="meta">
-                    <date>Feb 02, 2017</date><div class="ui blue inverted label">GitHub</div>
+                    <date>Feb 02, 2017</date><div class="ui purple inverted label">GitHub</div>
                   </div>
                   <div class="description">
                     <h5 class="header">
@@ -163,7 +163,7 @@
                     Computer science courses
                   </h1>
                   <div class="meta">
-                    <date>Jan 31, 2017</date><div class="ui teal inverted label">Computer Science</div>
+                    <date>Jan 31, 2017</date><div class="ui yellow inverted label">Computer Science</div>
                   </div>
                   <div class="description">
                     <h5 class="header">
@@ -179,13 +179,13 @@
                   </div>
                 </div>
                 </div>
-                <div class="ui yellow card">
+                <div class="ui olive card">
                 <div class="content">
                   <h1 class="header">
                     First Tweet
                   </h1>
                   <div class="meta">
-                    <date>Jan 30, 2017</date><div class="ui black inverted label">Nanoc-Plate</div><div class="ui purple inverted label">Semantic-UI</div>
+                    <date>Jan 30, 2017</date><div class="ui yellow inverted label">Nanoc-Plate</div><div class="ui orange inverted label">Semantic-UI</div>
                   </div>
                   <div class="description">
                     <h5 class="header">
