20180716, 诗二首（深悟，逆）

--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
         <div class="nine wide centered column">
           <div class="ui raised segment">
             <h1 class="ui header">
+              <a href="./blog/20180716/">诗二首（深悟，逆）</a>
+              <div class="sub header">
+                2018年07月16日
+              </div>
+            </h1>
+          </div>
+          <div class="ui raised segment">
+            <h1 class="ui header">
               <a href="./blog/20180709/">诗一首</a>
               <div class="sub header">
                 2018年07月09日
