--- a/index.html
+++ b/index.html
@@ -43,6 +43,30 @@
         <div class="nine wide centered column">
           <div class="ui raised segment">
             <h1 class="ui header">
+              <a href="./blog/20180827/">对联</a>
+              <div class="sub header">
+                2018年08月27日
+              </div>
+            </h1>
+          </div>
+          <div class="ui raised segment">
+            <h1 class="ui header">
+              <a href="./blog/20180826/">诗一首</a>
+              <div class="sub header">
+                2018年08月26日
+              </div>
+            </h1>
+          </div>
+          <div class="ui raised segment">
+            <h1 class="ui header">
+              <a href="./blog/20180825/">诗一首（感怀）</a>
+              <div class="sub header">
+                2018年08月25日
+              </div>
+            </h1>
+          </div>
+          <div class="ui raised segment">
+            <h1 class="ui header">
               <a href="./blog/20180801/">诗一首（侧记）</a>
               <div class="sub header">
                 2018年08月01日
