20181006，诗一首（2018年国庆）; 20181008，诗一首（送二哥）

--- a/index.html
+++ b/index.html
@@ -43,6 +43,22 @@
         <div class="nine wide centered column">
           <div class="ui raised segment">
             <h1 class="ui header">
+              <a href="./blog/20181008/">诗一首（送二哥）</a>
+              <div class="sub header">
+                2018年10月08日
+              </div>
+            </h1>
+          </div>
+          <div class="ui raised segment">
+            <h1 class="ui header">
+              <a href="./blog/20181006/">诗一首（2018年国庆）</a>
+              <div class="sub header">
+                2018年10月06日
+              </div>
+            </h1>
+          </div>
+          <div class="ui raised segment">
+            <h1 class="ui header">
               <a href="./blog/20180827/">对联</a>
               <div class="sub header">
                 2018年08月27日
