诗一首（随笔），20181020

--- a/index.html
+++ b/index.html
@@ -43,6 +43,14 @@
         <div class="nine wide centered column">
           <div class="ui raised segment">
             <h1 class="ui header">
+              <a href="./blog/20181020/">诗一首（随笔）</a>
+              <div class="sub header">
+                2018年10月20日
+              </div>
+            </h1>
+          </div>
+          <div class="ui raised segment">
+            <h1 class="ui header">
               <a href="./blog/20181008/">诗一首（送二哥）</a>
               <div class="sub header">
                 2018年10月08日
