20181020，诗一首（友富赋）

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta content="/ms-icon-144x144.png" name="msapplication-TileImage" />
     <meta content="#ffffff" name="theme-color" />
     <link color="#5bbad5" href="/safari-pinned-tab.svg" rel="mask-icon" />
-    <title>杜小清的主页</title>
+    <title>主页</title>
     <link href="/static/dist/semantic-ui/semantic.min.css" rel="stylesheet" type="text/css" />
     <link href="/static/dist/fonts.css/fonts.css" rel="stylesheet" type="text/css" />
     <link href="/static/stylesheets/default.css" rel="stylesheet" type="text/css" />
@@ -41,6 +41,14 @@
     <div id="content">
       <div class="ui stackable container grid">
         <div class="nine wide centered column">
+          <div class="ui raised segment">
+            <h1 class="ui header">
+              <a href="./blog/20181021/">诗一首（友富赋）</a>
+              <div class="sub header">
+                2018年10月20日
+              </div>
+            </h1>
+          </div>
           <div class="ui raised segment">
             <h1 class="ui header">
               <a href="./blog/20181020/">诗一首（随笔）</a>
